# jakob-bagterp.github.io

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: docs.yml  index_now_submit_sitemap.yml  test_docs.yml
docs/: README.md  index.md  requirements.txt  robots.txt
