[project]
name = "jakob-bagterp-github-io"
version = "0.1.0"
description = "List of open source projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.3",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-minify-plugin==0.8.0",
]
